--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -86,6 +86,32 @@
     "for parent, children in hierarchy.items(): \n",
     "    edge_maker(G, parent, children)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "list the nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Economics', 'Microeconomics', 'Macroeconomics', 'International Economics', 'Research', 'Competitive markets', \"Consumer's choice\", \"Firm's behavior\", 'Non-competitive markets', 'Government interventions', 'Market failures', 'Labor market', 'Game thoery', 'Innovations', 'Macroeconomic data', 'Technology and long-run growth', 'AD-AS model', 'Money and banks', 'Monetary and fiscal policy', 'Economic fluctuations and crises', 'Institutions and Inequality', 'Specialization and trade', 'Protectionism', 'Currencies', 'Environment and sustainable development', 'Nobel laureates (memory)', 'Nobel research (connectivity)']\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(G.nodes())\n",
+    "print(len(G.nodes))"
+   ]
   }
  ],
  "metadata": {
