--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -142,12 +142,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Make all the adjusments of color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for edge in net.edges:\n",
+    "    edge['color'] = 'black' \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Show the graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,10 +189,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x112c17fb0>"
+       "<IPython.lib.display.IFrame at 0x112e9bfb0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
