--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -112,8 +112,62 @@
     }
    ],
    "source": [
-    "print(G.nodes())\n",
+    "print((G.nodes()))\n",
     "print(len(G.nodes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Competitive markets', \"Consumer's choice\", \"Firm's behavior\", 'Non-competitive markets', 'Government interventions', 'Market failures', 'Labor market', 'Game thoery', 'Innovations']\n",
+      "['Macroeconomic data', 'Technology and long-run growth', 'Labor market', 'AD-AS model', 'Money and banks', 'Monetary and fiscal policy', 'Economic fluctuations and crises', 'Institutions and Inequality']\n",
+      "['Specialization and trade', 'Protectionism', 'Currencies', 'Environment and sustainable development']\n",
+      "['Nobel laureates (memory)', 'Nobel research (connectivity)']\n",
+      "22\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in G.successors(\"Economics\"): \n",
+    "    print(list(G.successors(node)))\n",
+    "grandchildren_econ = nx.descendants_at_distance(G, \"Economics\", 2 )\n",
+    "print(len(grandchildren_econ))\n",
+    "descendants_econ = nx.descendants(G, \"Economics\")\n",
+    "print(len(descendants_econ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in G.successors(\"Economics\"): \n",
+    "    G.nodes[node][\"color\"] = \"rgba(254, 112, 112, 1)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'size': 10, 'color': 'rgba(254, 112, 112, 1)'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(G.nodes[\"Research\"])"
    ]
   },
   {
@@ -125,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +204,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "for edge in net.edges:\n",
     "    edge['color'] = 'black' \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in net.nodes: \n",
+    "    node[\"font\"] = {'size': 12}\n",
+    "    if node['id'] == \"Economics\": \n",
+    "        node['color'] = \"rgba(17, 113, 229, 1)\"\n",
+    "        node['size'] = 30\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in net.nodes:\n",
+    "    node[\"color\"] = G.nodes[node[\"id\"]].get(\"color\", \"#87CEEB\")"
    ]
   },
   {
@@ -167,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -192,10 +269,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x111473a40>"
+       "<IPython.lib.display.IFrame at 0x116522ea0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
