--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -8,12 +8,14 @@
     "\n",
     "This is the first test for an unordered network of the economics and finance curriculum for the IEO training. \n",
     "\n",
-    "This was first done February 5th 2025"
+    "This was first done February 5th 2025\n",
+    "\n",
+    "This code is for testing and playing with networkx and pyvis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -117,8 +119,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test for descendants and succesors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -145,24 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#here I change the color of a node in G and later I get that attribute to convert a real color in pyvis\n",
     "for node in G.successors(\"Economics\"): \n",
-    "    G.nodes[node][\"color\"] = \"rgba(254, 112, 112, 1)\""
+    "    G.nodes[node][\"color\"] = \"rgba(254, 112, 112, 1)\"\n",
+    "    G.nodes[node][\"size\"] = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'size': 10, 'color': 'rgba(254, 112, 112, 1)'}\n"
+      "{'color': 'rgba(254, 112, 112, 1)', 'size': 20}\n"
      ]
     }
    ],
@@ -179,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in net.nodes:\n",
+    "    node[\"size\"] = G.nodes[node[\"id\"]].get(\"size\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +247,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for node in net.nodes:\n",
-    "    node[\"color\"] = G.nodes[node[\"id\"]].get(\"color\", \"#87CEEB\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -269,10 +280,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x116522ea0>"
+       "<IPython.lib.display.IFrame at 0x11640e2a0>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
