first dynamic size change

--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,14 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in G.nodes():\n",
+    "    G.nodes[node]['descendants'] = len(nx.descendants(G, node))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'color': 'rgba(254, 112, 112, 1)', 'size': 20}\n"
+      "{'color': 'rgba(254, 112, 112, 1)', 'size': 20, 'descendants': 2}\n"
      ]
     }
    ],
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,17 +236,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes:\n",
-    "    node[\"size\"] = G.nodes[node[\"id\"]].get(\"size\")"
+    "    node['title'] = str(G.nodes[node['id']].get('descendants'))\n",
+    "    node[\"size\"] = G.nodes[node['id']].get('descendants') + 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'color': '#97c2fc',\n",
+       "  'descendants': 26,\n",
+       "  'size': 31,\n",
+       "  'id': 'Economics',\n",
+       "  'label': 'Economics',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '26'},\n",
+       " {'color': 'rgba(254, 112, 112, 1)',\n",
+       "  'size': 14,\n",
+       "  'descendants': 9,\n",
+       "  'id': 'Microeconomics',\n",
+       "  'label': 'Microeconomics',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '9'},\n",
+       " {'color': 'rgba(254, 112, 112, 1)',\n",
+       "  'size': 13,\n",
+       "  'descendants': 8,\n",
+       "  'id': 'Macroeconomics',\n",
+       "  'label': 'Macroeconomics',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '8'},\n",
+       " {'color': 'rgba(254, 112, 112, 1)',\n",
+       "  'size': 9,\n",
+       "  'descendants': 4,\n",
+       "  'id': 'International Economics',\n",
+       "  'label': 'International Economics',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '4'},\n",
+       " {'color': 'rgba(254, 112, 112, 1)',\n",
+       "  'size': 7,\n",
+       "  'descendants': 2,\n",
+       "  'id': 'Research',\n",
+       "  'label': 'Research',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '2'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Competitive markets',\n",
+       "  'label': 'Competitive markets',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': \"Consumer's choice\",\n",
+       "  'label': \"Consumer's choice\",\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': \"Firm's behavior\",\n",
+       "  'label': \"Firm's behavior\",\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Non-competitive markets',\n",
+       "  'label': 'Non-competitive markets',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Government interventions',\n",
+       "  'label': 'Government interventions',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Market failures',\n",
+       "  'label': 'Market failures',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Labor market',\n",
+       "  'label': 'Labor market',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Game thoery',\n",
+       "  'label': 'Game thoery',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Innovations',\n",
+       "  'label': 'Innovations',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Macroeconomic data',\n",
+       "  'label': 'Macroeconomic data',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Technology and long-run growth',\n",
+       "  'label': 'Technology and long-run growth',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'AD-AS model',\n",
+       "  'label': 'AD-AS model',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Money and banks',\n",
+       "  'label': 'Money and banks',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Monetary and fiscal policy',\n",
+       "  'label': 'Monetary and fiscal policy',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Economic fluctuations and crises',\n",
+       "  'label': 'Economic fluctuations and crises',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Institutions and Inequality',\n",
+       "  'label': 'Institutions and Inequality',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Specialization and trade',\n",
+       "  'label': 'Specialization and trade',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Protectionism',\n",
+       "  'label': 'Protectionism',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Currencies',\n",
+       "  'label': 'Currencies',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Environment and sustainable development',\n",
+       "  'label': 'Environment and sustainable development',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Nobel laureates (memory)',\n",
+       "  'label': 'Nobel laureates (memory)',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Nobel research (connectivity)',\n",
+       "  'label': 'Nobel research (connectivity)',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 9,\n",
+       "  'size': 14,\n",
+       "  'id': 'Finance',\n",
+       "  'label': 'Finance',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '9'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Financial Planning',\n",
+       "  'label': 'Financial Planning',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Banks and the banking system',\n",
+       "  'label': 'Banks and the banking system',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Saving Money',\n",
+       "  'label': 'Saving Money',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Borrowing Money, Credit',\n",
+       "  'label': 'Borrowing Money, Credit',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Investments and Risk Management',\n",
+       "  'label': 'Investments and Risk Management',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Insurance',\n",
+       "  'label': 'Insurance',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Financial Fraud',\n",
+       "  'label': 'Financial Fraud',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Crowdfunding',\n",
+       "  'label': 'Crowdfunding',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'},\n",
+       " {'color': '#97c2fc',\n",
+       "  'descendants': 0,\n",
+       "  'size': 5,\n",
+       "  'id': 'Cryptocurrencies',\n",
+       "  'label': 'Cryptocurrencies',\n",
+       "  'shape': 'dot',\n",
+       "  'title': '0'}]"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -280,10 +570,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11640e2a0>"
+       "<IPython.lib.display.IFrame at 0x1163f1520>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
