normale size to 100 scale

--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,19 +235,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalizar datos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 468,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = -1\n",
+    "for node in G.nodes(): \n",
+    "    if G.nodes[node]['descendants'] > max: \n",
+    "        max = G.nodes[node]['descendants']\n",
+    "    \n",
+    "normalizar =  100 / (max + 1) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes:\n",
     "    node['title'] = str(G.nodes[node['id']].get('descendants'))\n",
-    "    node[\"size\"] = G.nodes[node['id']].get('descendants') + 5"
+    "    node[\"size\"] = (G.nodes[node['id']].get('descendants') + 1) * normalizar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -255,34 +277,34 @@
       "text/plain": [
        "[{'color': '#97c2fc',\n",
        "  'descendants': 26,\n",
-       "  'size': 31,\n",
+       "  'size': 100.0,\n",
        "  'id': 'Economics',\n",
        "  'label': 'Economics',\n",
        "  'shape': 'dot',\n",
        "  'title': '26'},\n",
        " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 14,\n",
+       "  'size': 37.03703703703704,\n",
        "  'descendants': 9,\n",
        "  'id': 'Microeconomics',\n",
        "  'label': 'Microeconomics',\n",
        "  'shape': 'dot',\n",
        "  'title': '9'},\n",
        " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 13,\n",
+       "  'size': 33.333333333333336,\n",
        "  'descendants': 8,\n",
        "  'id': 'Macroeconomics',\n",
        "  'label': 'Macroeconomics',\n",
        "  'shape': 'dot',\n",
        "  'title': '8'},\n",
        " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 9,\n",
+       "  'size': 18.51851851851852,\n",
        "  'descendants': 4,\n",
        "  'id': 'International Economics',\n",
        "  'label': 'International Economics',\n",
        "  'shape': 'dot',\n",
        "  'title': '4'},\n",
        " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 7,\n",
+       "  'size': 11.11111111111111,\n",
        "  'descendants': 2,\n",
        "  'id': 'Research',\n",
        "  'label': 'Research',\n",
@@ -290,231 +312,231 @@
        "  'title': '2'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Competitive markets',\n",
        "  'label': 'Competitive markets',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': \"Consumer's choice\",\n",
        "  'label': \"Consumer's choice\",\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': \"Firm's behavior\",\n",
        "  'label': \"Firm's behavior\",\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Non-competitive markets',\n",
        "  'label': 'Non-competitive markets',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Government interventions',\n",
        "  'label': 'Government interventions',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Market failures',\n",
        "  'label': 'Market failures',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Labor market',\n",
        "  'label': 'Labor market',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Game thoery',\n",
        "  'label': 'Game thoery',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Innovations',\n",
        "  'label': 'Innovations',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Macroeconomic data',\n",
        "  'label': 'Macroeconomic data',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Technology and long-run growth',\n",
        "  'label': 'Technology and long-run growth',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'AD-AS model',\n",
        "  'label': 'AD-AS model',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Money and banks',\n",
        "  'label': 'Money and banks',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Monetary and fiscal policy',\n",
        "  'label': 'Monetary and fiscal policy',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Economic fluctuations and crises',\n",
        "  'label': 'Economic fluctuations and crises',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Institutions and Inequality',\n",
        "  'label': 'Institutions and Inequality',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Specialization and trade',\n",
        "  'label': 'Specialization and trade',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Protectionism',\n",
        "  'label': 'Protectionism',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Currencies',\n",
        "  'label': 'Currencies',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Environment and sustainable development',\n",
        "  'label': 'Environment and sustainable development',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Nobel laureates (memory)',\n",
        "  'label': 'Nobel laureates (memory)',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Nobel research (connectivity)',\n",
        "  'label': 'Nobel research (connectivity)',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 9,\n",
-       "  'size': 14,\n",
+       "  'size': 37.03703703703704,\n",
        "  'id': 'Finance',\n",
        "  'label': 'Finance',\n",
        "  'shape': 'dot',\n",
        "  'title': '9'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Financial Planning',\n",
        "  'label': 'Financial Planning',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Banks and the banking system',\n",
        "  'label': 'Banks and the banking system',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Saving Money',\n",
        "  'label': 'Saving Money',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Borrowing Money, Credit',\n",
        "  'label': 'Borrowing Money, Credit',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Investments and Risk Management',\n",
        "  'label': 'Investments and Risk Management',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Insurance',\n",
        "  'label': 'Insurance',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Financial Fraud',\n",
        "  'label': 'Financial Fraud',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Crowdfunding',\n",
        "  'label': 'Crowdfunding',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'descendants': 0,\n",
-       "  'size': 5,\n",
+       "  'size': 3.7037037037037037,\n",
        "  'id': 'Cryptocurrencies',\n",
        "  'label': 'Cryptocurrencies',\n",
        "  'shape': 'dot',\n",
        "  'title': '0'}]"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,15 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for node in net.nodes: \n",
-    "    node[\"font\"] = {'size': 12}\n",
-    "    if node['id'] == \"Economics\": \n",
-    "        node['color'] = \"rgba(17, 113, 229, 1)\"\n",
-    "        node['size'] = 30\n"
+    "#for node in net.nodes: \n",
+    "    #node[\"font\"] = {'size': 12}\n",
+    "    #if node['id'] == \"Economics\": \n",
+    "       # node['color'] = \"rgba(17, 113, 229, 1)\"\n"
    ]
   },
   {
@@ -545,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
@@ -570,10 +591,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1163f1520>"
+       "<IPython.lib.display.IFrame at 0x1184dd520>"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
