asign scores to colors, discrete

--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 856,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 857,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 858,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 859,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 860,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 861,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 862,
    "metadata": {},
    "outputs": [
     {
@@ -154,37 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#here I change the color of a node in G and later I get that attribute to convert a real color in pyvis\n",
-    "for node in G.successors(\"Economics\"): \n",
-    "    G.nodes[node][\"color\"] = \"rgba(254, 112, 112, 1)\"\n",
-    "    G.nodes[node][\"size\"] = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in G.nodes():\n",
     "    G.nodes[node]['descendants'] = len(nx.descendants(G, node))\n",
+    "G.nodes['Microeconomics']['score'] = 0.8\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 864,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'color': 'rgba(254, 112, 112, 1)', 'size': 20, 'descendants': 2}\n"
+      "{'descendants': 2}\n"
      ]
     }
    ],
@@ -201,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 865,
    "metadata": {},
    "outputs": [
     {
@@ -226,12 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 866,
    "metadata": {},
    "outputs": [],
    "source": [
     "for edge in net.edges:\n",
-    "    edge['color'] = 'black' \n"
+    "    edge['color'] = 'rgba(255, 200, 0, 1)' \n"
    ]
   },
   {
@@ -243,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 867,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,54 +247,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 868,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_scale = {\"red\" : (0.0, 0.3), \"yellow\": (0.3, 0.7), \"green\":(0.7, 1)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes:\n",
     "    node['title'] = str(G.nodes[node['id']].get('descendants'))\n",
-    "    node[\"size\"] = (G.nodes[node['id']].get('descendants') + 1) * normalizar"
+    "    node[\"size\"] = (G.nodes[node['id']].get('descendants') + 1) * normalizar\n",
+    "    if node['id'] == 'Economics': \n",
+    "        node['color'] = 'rgba(255, 0, 0, 1)'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 870,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[870], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m net\u001b[38;5;241m.\u001b[39mnodes: \n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m node[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m color_scale[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m node[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m color_scale[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]: \n\u001b[1;32m      3\u001b[0m         node[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'score'"
+     ]
+    }
+   ],
+   "source": [
+    "for node in net.nodes: \n",
+    "    if node['score'] <= color_scale['green'][1] and node['score'] > color_scale['green'][0]: \n",
+    "        node['color'] = 'green'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'color': '#97c2fc',\n",
+       "[{'color': 'rgba(255, 0, 0, 1)',\n",
        "  'descendants': 26,\n",
        "  'size': 100.0,\n",
        "  'id': 'Economics',\n",
        "  'label': 'Economics',\n",
        "  'shape': 'dot',\n",
        "  'title': '26'},\n",
-       " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 37.03703703703704,\n",
+       " {'color': '#97c2fc',\n",
        "  'descendants': 9,\n",
+       "  'size': 37.03703703703704,\n",
        "  'id': 'Microeconomics',\n",
        "  'label': 'Microeconomics',\n",
        "  'shape': 'dot',\n",
        "  'title': '9'},\n",
-       " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 33.333333333333336,\n",
+       " {'color': '#97c2fc',\n",
        "  'descendants': 8,\n",
+       "  'size': 33.333333333333336,\n",
        "  'id': 'Macroeconomics',\n",
        "  'label': 'Macroeconomics',\n",
        "  'shape': 'dot',\n",
        "  'title': '8'},\n",
-       " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 18.51851851851852,\n",
+       " {'color': '#97c2fc',\n",
        "  'descendants': 4,\n",
+       "  'size': 18.51851851851852,\n",
        "  'id': 'International Economics',\n",
        "  'label': 'International Economics',\n",
        "  'shape': 'dot',\n",
        "  'title': '4'},\n",
-       " {'color': 'rgba(254, 112, 112, 1)',\n",
-       "  'size': 11.11111111111111,\n",
+       " {'color': '#97c2fc',\n",
        "  'descendants': 2,\n",
+       "  'size': 11.11111111111111,\n",
        "  'id': 'Research',\n",
        "  'label': 'Research',\n",
        "  'shape': 'dot',\n",
@@ -536,7 +559,7 @@
        "  'title': '0'}]"
       ]
      },
-     "execution_count": 470,
+     "execution_count": 852,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -591,10 +614,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1184dd520>"
+       "<IPython.lib.display.IFrame at 0x116ba4b90>"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 854,
      "metadata": {},
      "output_type": "execute_result"
     }
