--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1406,
+   "execution_count": 1445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1407,
+   "execution_count": 1446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1408,
+   "execution_count": 1447,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1409,
+   "execution_count": 1448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1410,
+   "execution_count": 1449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1411,
+   "execution_count": 1450,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1412,
+   "execution_count": 1451,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1413,
+   "execution_count": 1452,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1414,
+   "execution_count": 1453,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1415,
+   "execution_count": 1454,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1416,
+   "execution_count": 1455,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1417,
+   "execution_count": 1456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,40 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1418,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "color_scale = {\"red\" : (0.0, 0.3), \"yellow\": (0.3, 0.7), \"green\":(0.7, 1)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1419,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes:\n",
     "    node['title'] = str(G.nodes[node['id']].get('descendants'))\n",
     "    node[\"size\"] = (G.nodes[node['id']].get('descendants') + 1) * normalizar\n",
-    "    node['score'] = G.nodes[node['id']].get('score', 0.31)\n",
-    "    if node['id'] == 'Economics': \n",
-    "        node['color'] = 'rgba(255, 0, 0, 1)'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1420,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for node in net.nodes: \n",
-    "    if node['score'] <= color_scale['green'][1] and node['score'] > color_scale['green'][0]: \n",
-    "        node['color'] = 'rgba(100, 200, 0)'\n",
-    "    if node['score'] <= color_scale['yellow'][1] and node['score'] > color_scale['yellow'][0]: \n",
-    "        node['color'] = 'rgba(255, 255, 0)'\n",
-    "    if node['score'] <= color_scale['red'][1] and node['score'] > color_scale['red'][0]: \n",
-    "        node['color'] = 'rgba(255, 50, 0)'"
+    "    node['score'] = G.nodes[node['id']].get('score', 0.31)"
    ]
   },
   {
@@ -293,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1421,
+   "execution_count": 1458,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[255.0, 255.0, 0.0]"
+       "'rgba(255, 255, 0, 1)'"
       ]
      },
-     "execution_count": 1421,
+     "execution_count": 1458,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,20 +288,30 @@
     "    hue = 120 * score\n",
     "    rgb = mcolors.hsv_to_rgb([hue / 360, 1, 1])\n",
     "    for i in rgb: \n",
-    "        rgb_255.append((i * 255).round(1))\n",
-    "    return rgb_255\n",
+    "        rgb_255.append(int((i * 255).round(1)))\n",
+    "    return f'rgba({rgb_255[0]}, {rgb_255[1]}, {rgb_255[2]}, 1)'\n",
     "scores_to_rgb(0.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1422,
+   "execution_count": 1459,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in net.nodes: \n",
+    "    node['color'] = scores_to_rgb(node['score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1460,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'color': 'rgba(255, 255, 0)',\n",
+       "[{'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 26,\n",
        "  'size': 100.0,\n",
        "  'id': 'Economics',\n",
@@ -335,7 +319,7 @@
        "  'shape': 'dot',\n",
        "  'title': '26',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(100, 200, 0)',\n",
+       " {'color': 'rgba(102, 255, 0, 1)',\n",
        "  'descendants': 9,\n",
        "  'score': 0.8,\n",
        "  'size': 37.03703703703704,\n",
@@ -343,7 +327,7 @@
        "  'label': 'Microeconomics',\n",
        "  'shape': 'dot',\n",
        "  'title': '9'},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 8,\n",
        "  'size': 33.333333333333336,\n",
        "  'id': 'Macroeconomics',\n",
@@ -351,7 +335,7 @@
        "  'shape': 'dot',\n",
        "  'title': '8',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 4,\n",
        "  'size': 18.51851851851852,\n",
        "  'id': 'International Economics',\n",
@@ -359,7 +343,7 @@
        "  'shape': 'dot',\n",
        "  'title': '4',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 2,\n",
        "  'size': 11.11111111111111,\n",
        "  'id': 'Research',\n",
@@ -367,7 +351,7 @@
        "  'shape': 'dot',\n",
        "  'title': '2',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Competitive markets',\n",
@@ -375,7 +359,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': \"Consumer's choice\",\n",
@@ -383,7 +367,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': \"Firm's behavior\",\n",
@@ -391,7 +375,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Non-competitive markets',\n",
@@ -399,7 +383,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Government interventions',\n",
@@ -407,7 +391,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Market failures',\n",
@@ -415,7 +399,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Labor market',\n",
@@ -423,7 +407,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Game thoery',\n",
@@ -431,7 +415,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Innovations',\n",
@@ -439,7 +423,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Macroeconomic data',\n",
@@ -447,7 +431,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Technology and long-run growth',\n",
@@ -455,7 +439,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'AD-AS model',\n",
@@ -463,7 +447,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Money and banks',\n",
@@ -471,7 +455,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Monetary and fiscal policy',\n",
@@ -479,7 +463,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Economic fluctuations and crises',\n",
@@ -487,7 +471,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Institutions and Inequality',\n",
@@ -495,7 +479,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Specialization and trade',\n",
@@ -503,7 +487,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Protectionism',\n",
@@ -511,7 +495,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Currencies',\n",
@@ -519,7 +503,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Environment and sustainable development',\n",
@@ -527,7 +511,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Nobel laureates (memory)',\n",
@@ -535,7 +519,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Nobel research (connectivity)',\n",
@@ -543,7 +527,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 9,\n",
        "  'size': 37.03703703703704,\n",
        "  'id': 'Finance',\n",
@@ -551,7 +535,7 @@
        "  'shape': 'dot',\n",
        "  'title': '9',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Financial Planning',\n",
@@ -559,7 +543,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Banks and the banking system',\n",
@@ -567,7 +551,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Saving Money',\n",
@@ -575,7 +559,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Borrowing Money, Credit',\n",
@@ -583,7 +567,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Investments and Risk Management',\n",
@@ -591,7 +575,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Insurance',\n",
@@ -599,7 +583,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Financial Fraud',\n",
@@ -607,7 +591,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Crowdfunding',\n",
@@ -615,7 +599,7 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 255, 0)',\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Cryptocurrencies',\n",
@@ -625,7 +609,7 @@
        "  'score': 0.31}]"
       ]
      },
-     "execution_count": 1422,
+     "execution_count": 1460,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1423,
+   "execution_count": 1461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1424,
+   "execution_count": 1462,
    "metadata": {},
    "outputs": [
     {
@@ -680,10 +664,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1184ce240>"
+       "<IPython.lib.display.IFrame at 0x117098f80>"
       ]
      },
-     "execution_count": 1424,
+     "execution_count": 1462,
      "metadata": {},
      "output_type": "execute_result"
     }
